[package]
name = "furiosa-schedule-viewer"
version = "0.1.0"
edition = "2021"
description = "Local web server that serves the furiosa-schedule-viewer."
license = "Apache-2.0"

[[bin]]
name = "furiosa-schedule-viewer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
rust-embed = "8"
mime_guess = "2"
webbrowser = "1"
